--- a/src/app/user/add/user-add.component.html
+++ b/src/app/user/add/user-add.component.html
@@ -39,6 +39,7 @@
           Name is required
         </div>
       </div>
+Dodana linijka kodu
 
       <div class="form-group">
         <label for="alterEgo">Alter Ego</label>
