(add) dodana druga linijka kodu

--- a/src/app/user/add/user-add.component.html
+++ b/src/app/user/add/user-add.component.html
@@ -27,6 +27,7 @@
 
 
 <!--
+Dodana kolejna linijka
     <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
       <div class="form-group">
         <label for="name">Name</label>
